Update Post “kmemdump-step-by-step-on-qualcomm-automotive-platform”

--- a/src/content/blogs/kmemdump-step-by-step-on-qualcomm-automotive-platform.mdx
+++ b/src/content/blogs/kmemdump-step-by-step-on-qualcomm-automotive-platform.mdx
@@ -4,13 +4,11 @@ description: |-
   A step by step guide to try out kmemdump on the SA8775P Ride SX 4.0 Automotive
   Development Platform
 date: 2025-09-23T10:00:00.000+01:00
-author: Linaro
+author: linaro
 image: https://res.cloudinary.com/dl7c2wmhi/image/upload/v1757919737/linaro-website/images/blog/IMG_0548_oth5pe.jpg
 tags:
-  - kernel
-  - linux
-  - debug
-  - qualcomm
+  - iot-embedded
+  - linux-kernel
   - automotive
 related: []
 ---
