--- a/src/content/blogs/kmemdump-step-by-step-on-qualcomm-automotive-platform.mdx
+++ b/src/content/blogs/kmemdump-step-by-step-on-qualcomm-automotive-platform.mdx
@@ -34,7 +34,7 @@ automotive infotainment SoC designed for superior performance and power
 
 efficiency in automotive applications.
 
-![SA8775P Ride platform image](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758619475/linaro-website/images/blog/sa8875p_ride_platform_ygavop.png)
+![SA8775P Ride platform image](https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758626414/linaro-website/images/blog/embedded_grey_1_uipctu.jpg)
 
 # Preparing the environment
 
