--- a/src/content/blogs/kmemdump-step-by-step-on-qualcomm-automotive-platform.mdx
+++ b/src/content/blogs/kmemdump-step-by-step-on-qualcomm-automotive-platform.mdx
@@ -4,7 +4,7 @@ description: |-
   A step by step guide to try out kmemdump on the SA8775P Ride SX 4.0 Automotive
   Development Platform
 date: 2025-09-23T10:00:00.000+01:00
-author: linaro
+author: eugen-hristev
 image: https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758626414/linaro-website/images/blog/embedded_grey_1_uipctu.jpg
 tags:
   - iot-embedded
