Update Post “blog-2-posted-patches-what-next”

--- a/src/content/blogs/blog-2-posted-patches-what-next.mdx
+++ b/src/content/blogs/blog-2-posted-patches-what-next.mdx
@@ -6,7 +6,7 @@ description: "The Linux kernel development community is largely built around
   become a Kernel Developer - we talk about how to work effectively with the
   Linux kernel community. "
 date: 2025-09-25T10:21:00.000+01:00
-author: Neil Armstrong
+author: neil-armstrong
 image: https://res.cloudinary.com/dl7c2wmhi/image/upload/v1758792170/linaro-website/images/blog/IMG_0635_om3lxo.jpg
 tags:
   - linux-kernel
